--- a/src/assets/i18n/hi.json
+++ b/src/assets/i18n/hi.json
@@ -20,7 +20,9 @@
     "about": {
         "about": "हमारे बारे",
         "us": "में",
-        "annapurnas": "हमारे अन्नपूर्णा के लिए"
+        "annapurnas": "हमारे अन्नपूर्णा के लिए",
+        "paraFirst": "'कृषि भारतीय अर्थव्यवस्था की रीढ़ है।'- महात्मा गांधी ने छह दशक पहले कहा था। आज भी स्थिति वही है, जिसमें लगभग पूरी अर्थव्यवस्था कृषि की है, जो गांवों का मुख्य आधार है। इसमें 16% का योगदान है। कुल जीडीपी और लगभग 52% भारतीय जनसंख्या के रोजगार के लिए खातों में। कृषि में तेजी से विकास न केवल आत्मनिर्भरता के लिए आवश्यक है। भारतीय किसान उत्पादन और उत्पादकता में इस तथ्य के बावजूद दूसरे स्थान पर हैं कि लाखों सीमांत और छोटे किसान हैं। वे विकसित देशों में किसानों के रूप में कुशलता से कृषि प्रौद्योगिकी में सुधार करते हैं। यह महसूस किया जाता है कि उर्वरकों, बीज, कीटनाशकों जैसे समय पर और पर्याप्त आदानों के प्रावधान के साथ और सस्ती कृषि ऋण / फसल बीमा उपलब्ध कराकर, भारतीय किसान भोजन सुनिश्चित करने जा रहे हैं। और राष्ट्र को पोषण सुरक्षा।",
+        "paraSecond": "भारतीय किसानों को बहुत सी समस्याओं का सामना करना पड़ता है जब सही कीमत पर अधिकृत चैनल से बीज और उर्वरक खरीदने की बात आती है। खेत की उपज को उचित मूल्य पर बेचने पर भी लागू होता है ताकि खेती लाभदायक व्यवसाय बन जाए। एक घंटे की आवश्यकता खेतों के लिए ई-पोर्टल बनाने की है, जिसमें वे इष्टतम मूल्य पर बीज और उर्वरक खरीद सकते हैं। इस पोर्टल को उपभोक्ताओं को कृषि उत्पाद के लिए बोली लगाने / मांगने की अनुमति देनी चाहिए और इस तरह से मध्यम आदमी को खत्म करना चाहिए और किसानों और उपभोक्ताओं दोनों को लाभान्वित करना चाहिए।"
     },
     "services": {
         "whyHere": "यहाँ क्यों?",
@@ -38,9 +40,7 @@
         "cashless": "कैशलेस खरीद",
         "goCashless": "अब कैशलेस हो जाइए और केवल कुछ अंगुली के नलों से भुगतान करें"
     },
-    "team": {
-
-    },
+    "team": {},
     "login": {
         "login": "लॉग इन करें",
         "loginBooth": "बूथ के रूप में लॉगिन करें",
@@ -64,6 +64,7 @@
         "enterMobile": "अपना मोबाइल नंबर दर्ज करें",
         "enterEmail": "अपनी ईमेल आईडी दर्ज करें",
         "enterBoothAddress": "अपना बूथ पता दर्ज करें",
+        "enterAddress": "अपना पता दर्ज करें",
         "nameReq": "नाम आवश्यक है",
         "boothNameReq": "बूथ का नाम आवश्यक है",
         "validMobile": "कृपया एक मान्य मोबाइल नंबर दर्ज करें",
