--- a/src/assets/i18n/hi.json
+++ b/src/assets/i18n/hi.json
@@ -7,7 +7,7 @@
         "home": "होम",
         "aboutUs": "हमारे बारे में",
         "services": "सेवाएं",
-        "team": "समूह",
+        "team": "टीम",
         "login": "लॉग इन करें",
         "register": "रजिस्टर करें",
         "dashboard": "डैशबोर्ड",
@@ -40,7 +40,22 @@
         "cashless": "कैशलेस खरीद",
         "goCashless": "अब कैशलेस हो जाइए और केवल कुछ अंगुली के नलों से भुगतान करें"
     },
-    "team": {},
+    "team": {
+        "hi": "नमस्ते !",
+        "ourProfessionals": "हमारी टीम",
+        "introDev": "मुझे एक डेवलपर के रूप में अपना परिचय देना पसंद है।",
+        "introDesigner": "मुझे एक डिजाइनर के रूप में अपना परिचय देना पसंद है।",
+        "introWeb": "मुझे खुद को वेब डिजाइनर के रूप में पेश करना बहुत पसंद है।",
+        "utkarsh": "उत्कर्ष श्रीवास्तव",
+        "utkarshRole": "सॉफ्टवेयर डेवलपर",
+        "rohan": "रोहन द्विवेदी",
+        "rohanRole": "थोड़ी उपयोगिता का व्यक्ति",
+        "shivam": "शिवम् राजपूत",
+        "shivamRole": "बेकार व्यक्ति",
+        "abhishek": "अभिषेक सिंह",
+        "abhishekRole": "एक व्यक्ति भी नहीं।",
+        "slogan": "टैलेंट जीतता है खेल, टीम वर्क जीतता है चैंपियनशिप! टीमवर्क ने कार्य को विभाजित किया और सफलता को गुणा किया। अकेले हम कितना कम कर सकते हैं लेकिन हम मिलकर कितना कुछ कर सकते हैं। जिस तरह से एक टीम एक कार्य को करती है, वही उसकी सफलता को निर्धारित करती है।"
+    },
     "login": {
         "login": "लॉग इन करें",
         "loginBooth": "बूथ के रूप में लॉगिन करें",
