--- a/src/assets/i18n/hi.json
+++ b/src/assets/i18n/hi.json
@@ -43,17 +43,18 @@
     "team": {
         "hi": "नमस्ते !",
         "ourProfessionals": "हमारी टीम",
-        "introDev": "मुझे एक डेवलपर के रूप में अपना परिचय देना पसंद है।",
-        "introDesigner": "मुझे एक डिजाइनर के रूप में अपना परिचय देना पसंद है।",
-        "introWeb": "मुझे खुद को वेब डिजाइनर के रूप में पेश करना बहुत पसंद है।",
         "utkarsh": "उत्कर्ष श्रीवास्तव",
-        "utkarshRole": "सॉफ्टवेयर डेवलपर",
+        "utkarshRole": "फुल स्टैक डेवलपर",
+        "introUtkarsh": "मुझे एक डेवलपर के रूप में अपना परिचय देना पसंद है।",
         "rohan": "रोहन द्विवेदी",
-        "rohanRole": "थोड़ी उपयोगिता का व्यक्ति",
+        "rohanRole": "एंड्रॉयड डेवलपर",
+        "introRohan": "मुझे खुद को एंड्रॉयड डेवलपर के रूप में पेश करना बहुत पसंद है।",
         "shivam": "शिवम् राजपूत",
-        "shivamRole": "बेकार व्यक्ति",
+        "shivamRole": "वेब डिजाइनर",
+        "introShivam": "मुझे खुद को वेब डिजाइनर के रूप में पेश करना बहुत पसंद है।",
         "abhishek": "अभिषेक सिंह",
-        "abhishekRole": "एक व्यक्ति भी नहीं।",
+        "abhishekRole": "डेटाबेस व्यवस्थापक",
+        "introAbhishek": "मुझे खुद को एक डेटाबेस प्रशासक के रूप में पेश करना पसंद है।",
         "slogan": "टैलेंट जीतता है खेल, टीम वर्क जीतता है चैंपियनशिप! टीमवर्क ने कार्य को विभाजित किया और सफलता को गुणा किया। अकेले हम कितना कम कर सकते हैं लेकिन हम मिलकर कितना कुछ कर सकते हैं। जिस तरह से एक टीम एक कार्य को करती है, वही उसकी सफलता को निर्धारित करती है।"
     },
     "login": {
@@ -91,5 +92,8 @@
         "signUp": "अपने आधुनिक किसान साप्ताहिक समाचार पत्र के लिए साइन अप करें",
         "enterEmail": "अपना ईमेल दर्ज करें",
         "subscribe": "सदस्यता ले"
+    },
+    "footer": {
+        "follow": "फॉलो करें"
     }
 }
