--- a/src/assets/i18n/hi.json
+++ b/src/assets/i18n/hi.json
@@ -95,5 +95,17 @@
     },
     "footer": {
         "follow": "फॉलो करें"
+    },
+    "farmer": {
+        "sellAgri": "अपने कृषि उत्पादों को बेचें",
+        "rentMachines": "अपनी मशीनरी किराए पर रखें",
+        "viewWeather": "मौसम का पूर्वानुमान देखें",
+        "marketRate": "बाजार दर देखें",
+        "search": "खोज करें",
+        "searchPlaceholder": "उदाहरण: आलू",
+        "sNo": "क्रम संख्या",
+        "name": "नाम",
+        "localRate": "स्थानीय दर प्रति 100 केजी",
+        "avgRate": "औसत दर प्रति 100 केजी"
     }
 }
