--- a/src/assets/i18n/hi.json
+++ b/src/assets/i18n/hi.json
@@ -97,8 +97,8 @@
         "follow": "फॉलो करें"
     },
     "farmer": {
-        "sellAgri": "अपने कृषि उत्पादों को बेचें",
-        "rentMachines": "अपनी मशीनरी किराए पर रखें",
+        "purchase": "अपनी आवश्यकताओं के लिए खरीदारी करें",
+        "sellRentAgri": "अपने कृषि उत्पादों को बेचें या किराए पर रखें",
         "viewWeather": "मौसम का पूर्वानुमान देखें",
         "marketRate": "बाजार दर देखें",
         "search": "खोज करें",
