--- a/src/assets/i18n/hi.json
+++ b/src/assets/i18n/hi.json
@@ -3,7 +3,17 @@
     "common": {
         "cancel": "रद्द करें",
         "submit": "जमा करें",
-        "nearbyBooths": "आस-पास के बूथ देखें"
+        "nearbyBooths": "आस-पास के बूथ देखें",
+        "viewWeather": "मौसम का पूर्वानुमान देखें",
+        "marketRate": "बाजार दर देखें",
+        "sNo": "क्रम संख्या",
+        "search": "खोज करें",
+        "updateLocation": "स्थान अपडेट करने के लिए क्लिक करें"
+    },
+    "pageNotFound": {
+        "title": "ऊप्स! पेज नहीं मिला",
+        "text": "क्षमा करें, लेकिन जिस पेज को आप खोज रहे हैं वह मौजूद नहीं है, हटा दिया गया है। नाम बदला गया या अस्थायी रूप से अनुपलब्ध है।",
+        "backHome": "वापस मुख्य पृष्ठ पर"
     },
     "navigation": {
         "home": "होम",
@@ -98,16 +108,53 @@
     "footer": {
         "follow": "फॉलो करें"
     },
+    "location": {
+        "pin": "कृपया अपना स्थान पिन करें"
+    },
     "farmer": {
         "purchase": "अपनी आवश्यकताओं के लिए खरीदारी करें",
-        "sellRentAgri": "अपने कृषि उत्पादों को बेचें या किराए पर रखें",
-        "viewWeather": "मौसम का पूर्वानुमान देखें",
-        "marketRate": "बाजार दर देखें",
-        "search": "खोज करें",
+        "sellRentAgri": "अपने कृषि उत्पादों को बेचें या किराए पर रखें"
+    },
+    "marketRate": {
         "searchPlaceholder": "उदाहरण: आलू",
-        "sNo": "क्रम संख्या",
         "name": "नाम",
         "localRate": "स्थानीय दर प्रति 100 केजी",
         "avgRate": "औसत दर प्रति 100 केजी"
+    },
+    "nearBy": {
+        "boothName": "बूथ का नाम",
+        "dist": "आपसे दूरी",
+        "boothRepr": "बूथ प्रतिनिधि",
+        "boothEmail": "बूथ ईमेल",
+        "boothPhone": "बूथ फोन",
+        "boothAdd": "बूथ का पता",
+        "noBooth": "आस-पास के बूथ नहीं मिले!"
+    },
+    "weather": {
+        "noWeather": "कोई मौसम डेटा नहीं मिला!",
+        "weatherFor": "मौसम का पूर्वानुमान",
+        "lat": "अक्षांश:",
+        "lon": "देशान्तर:",
+        "time": "समय क्षेत्र:",
+        "currentWeather": "वर्तमान मौसम की स्थिति",
+        "sunRise": "सूर्योदय:",
+        "sunset": "सूर्यास्त:",
+        "cond": "स्थिति:",
+        "temp": "तापमान:",
+        "speed": "हवा की गति:",
+        "dir": "हवा की दिशा:",
+        "humid": "नमी:",
+        "pres": "वायुमण्डलीय दबाव:",
+        "visib": "दृश्यता:",
+        "lastUpdate": "अंतिम बार अपडेट किया गया:",
+        "mb": "मिलीबार",
+        "kmph": "किमी प्रति घंटे",
+        "km": "कि.मी.",
+        "details": "विवरण",
+        "date": "तारीख",
+        "day": "दिन",
+        "minTemp": "न्यूनतम तापमान",
+        "maxTemp": "अधिकतम तापमान",
+        "condition": "स्थिति"
     }
 }
