weather component corrected

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -150,6 +150,7 @@
         "mb": "millibars",
         "kmph": "KMPH",
         "km": "KMs",
+        "forecast": "Weather forecast for next 10 days",
         "details": "Details",
         "date": "Date",
         "day": "Day",
