--- a/src/assets/i18n/hi.json
+++ b/src/assets/i18n/hi.json
@@ -137,7 +137,7 @@
         "lon": "देशान्तर:",
         "time": "समय क्षेत्र:",
         "currentWeather": "वर्तमान मौसम की स्थिति",
-        "sunRise": "सूर्योदय:",
+        "sunrise": "सूर्योदय:",
         "sunset": "सूर्यास्त:",
         "cond": "स्थिति:",
         "temp": "तापमान:",
@@ -150,6 +150,7 @@
         "mb": "मिलीबार",
         "kmph": "किमी प्रति घंटे",
         "km": "कि.मी.",
+        "forecast": "अगले 10 दिनों के लिए मौसम का पूर्वानुमान",
         "details": "विवरण",
         "date": "तारीख",
         "day": "दिन",
