--- a/src/assets/i18n/hi.json
+++ b/src/assets/i18n/hi.json
@@ -133,6 +133,7 @@
     "weather": {
         "noWeather": "कोई मौसम डेटा नहीं मिला!",
         "weatherFor": "मौसम का पूर्वानुमान",
+        "location": "स्थान:",
         "lat": "अक्षांश:",
         "lon": "देशान्तर:",
         "time": "समय क्षेत्र:",
