--- a/src/assets/i18n/hi.json
+++ b/src/assets/i18n/hi.json
@@ -116,6 +116,7 @@
         "sellRentAgri": "अपने कृषि उत्पादों को बेचें या किराए पर रखें"
     },
     "marketRate": {
+        "noMarketRate": "प्रदर्शित करने के लिए कोई बाज़ार दर नहीं है!",
         "searchPlaceholder": "उदाहरण: आलू",
         "name": "नाम",
         "localRate": "स्थानीय दर प्रति 100 केजी",
@@ -126,6 +127,7 @@
         "dist": "आपसे दूरी",
         "boothRepr": "बूथ प्रतिनिधि",
         "boothEmail": "बूथ ईमेल",
+        "km": "कि.मी.",
         "boothPhone": "बूथ फोन",
         "boothAdd": "बूथ का पता",
         "noBooth": "आस-पास के बूथ नहीं मिले!"
