--- a/src/assets/i18n/hi.json
+++ b/src/assets/i18n/hi.json
@@ -130,7 +130,8 @@
         "km": "कि.मी.",
         "boothPhone": "बूथ फोन",
         "boothAdd": "बूथ का पता",
-        "noBooth": "आस-पास के बूथ नहीं मिले!"
+        "noBooth": "आस-पास के बूथ नहीं मिले!",
+        "viewMore": "और देखें"
     },
     "weather": {
         "noWeather": "कोई मौसम डेटा नहीं मिला!",
