--- a/src/assets/i18n/hi.json
+++ b/src/assets/i18n/hi.json
@@ -161,5 +161,11 @@
         "minTemp": "न्यूनतम तापमान",
         "maxTemp": "अधिकतम तापमान",
         "condition": "स्थिति"
+    },
+    "shop": {
+        "takeShop": "मुझे दुकान पर ले चलो",
+        "purchase": "खरीदारी करें",
+        "rent": "किराए पर लें",
+        "noProducts": "दिखाने के लिए कोई उत्पाद नहीं"
     }
 }
