--- a/src/assets/i18n/hi.json
+++ b/src/assets/i18n/hi.json
@@ -72,8 +72,7 @@
     "login": {
         "login": "लॉग इन करें",
         "loginBooth": "बूथ के रूप में लॉगिन करें",
-        "loginFarmer": "किसान के रूप में लॉगिन करें",
-        "loginSeller": "विक्रेता के रूप में लॉगिन करें",
+        "loginUser": "उपयोगकर्ता के रूप में लॉगिन करें",
         "enterUserOrEmail": "अपना उपयोगकर्ता नाम या पंजीकृत ईमेल आईडी दर्ज करें",
         "enterPassword": "अपना पासवर्ड दर्ज करें",
         "validUserOrEmail": "कृपया एक मान्य उपयोगकर्ता नाम या ईमेल आईडी दर्ज करें",
@@ -82,23 +81,28 @@
     "register": {
         "register": "रजिस्टर करें",
         "booth": "बूथ",
-        "farmer": "किसान",
-        "seller": "विक्रेता",
+        "user": "उपयोगकर्ता",
         "registerBooth": "बूथ के रूप में पंजीकृत करें",
-        "registerFarmer": "किसान के रूप में पंजीकरण करें",
-        "registerSeller": "विक्रेता के रूप में पंजीकरण करें",
+        "registerUser": "उपयोगकर्ता के रूप में पंजीकृत करें",
         "enterName": "अपना नाम दर्ज करें",
         "enterBooth": "अपना बूथ का नाम दर्ज करें",
         "enterMobile": "अपना मोबाइल नंबर दर्ज करें",
         "enterEmail": "अपनी ईमेल आईडी दर्ज करें",
+        "enterOccp": "अपना व्यवसाय दर्ज करें",
         "enterBoothAddress": "अपना बूथ पता दर्ज करें",
         "enterAddress": "अपना पता दर्ज करें",
         "nameReq": "नाम आवश्यक है",
         "boothNameReq": "बूथ का नाम आवश्यक है",
         "validMobile": "कृपया एक मान्य मोबाइल नंबर दर्ज करें",
         "validEmail": "कृपया मान्य ईमेल आईडी दर्ज करें",
+        "validOccp": "कृपया एक वैध व्यवसाय दर्ज करें",
         "boothAddReq": "बूथ का पता आवश्यक है",
         "addressReq": "पता आवश्यक है"
+    },
+    "occupation": {
+        "choose1": "इनमें से एक चुनें",
+        "farmer": "किसान",
+        "other": "अन्य"
     },
     "newsletter": {
         "signUp": "अपने आधुनिक किसान साप्ताहिक समाचार पत्र के लिए साइन अप करें",
@@ -107,6 +111,10 @@
     },
     "footer": {
         "follow": "फॉलो करें"
+    },
+    "welcome": {
+        "welcome": "स्वागत हे,",
+        "update": "अपनी प्रोफ़ाइल अद्यतित करें"
     },
     "location": {
         "pin": "कृपया अपना स्थान पिन करें"
