booth update and no internet

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -8,7 +8,9 @@
         "marketRate": "View market rates",
         "sNo": "S. No.",
         "search": "Search",
-        "updateLocation": "Click to update location"
+        "updateLocation": "Click to update location",
+        "update": "Update",
+        "close": "Close"
     },
     "pageNotFound": {
         "title": "Oops! Page Not Found",
