--- a/src/assets/i18n/hi.json
+++ b/src/assets/i18n/hi.json
@@ -8,7 +8,9 @@
         "marketRate": "बाजार दर देखें",
         "sNo": "क्रम संख्या",
         "search": "खोज करें",
-        "updateLocation": "स्थान अपडेट करने के लिए क्लिक करें"
+        "updateLocation": "स्थान अपडेट करने के लिए क्लिक करें",
+        "update": "अपडेट करें",
+        "close": "बंद करें"
     },
     "pageNotFound": {
         "title": "ऊप्स! पेज नहीं मिला",
@@ -114,7 +116,7 @@
     },
     "welcome": {
         "welcome": "स्वागत हे,",
-        "update": "अपनी प्रोफ़ाइल अद्यतित करें"
+        "update": "अपनी प्रोफ़ाइल अपडेट करें"
     },
     "location": {
         "pin": "कृपया अपना स्थान पिन करें"
