--- a/src/assets/i18n/hi.json
+++ b/src/assets/i18n/hi.json
@@ -10,7 +10,10 @@
         "search": "खोज करें",
         "updateLocation": "स्थान अपडेट करने के लिए क्लिक करें",
         "update": "अपडेट करें",
-        "close": "बंद करें"
+        "close": "बंद करें",
+        "chooseFile": "अपनी प्रोफ़ाइल तस्वीर चुनने के लिए क्लिक करें",
+        "note": "ध्यान दें: ",
+        "noteFile": "केवल JPEG, PNG, JPG छवियों को अधिकतम 200kb आकार की अनुमति है।"
     },
     "pageNotFound": {
         "title": "ऊप्स! पेज नहीं मिला",
@@ -115,7 +118,7 @@
         "follow": "फॉलो करें"
     },
     "welcome": {
-        "welcome": "स्वागत हे,",
+        "welcome": "स्वागत है,",
         "update": "अपनी प्रोफ़ाइल अपडेट करें"
     },
     "location": {
