--- a/src/assets/i18n/hi.json
+++ b/src/assets/i18n/hi.json
@@ -180,5 +180,15 @@
         "purchase": "खरीदारी करें",
         "rent": "किराए पर लें",
         "noProducts": "दिखाने के लिए कोई उत्पाद नहीं"
+    },
+    "updatePass": {
+        "click": "अपना पासवर्ड अपडेट करने के लिए क्लिक करें",
+        "update": "अपना पासवर्ड अपडेट करें",
+        "enterCurr": "अपना वर्तमान पासवर्ड दर्ज करें",
+        "currReq": "वर्तमान पासवर्ड की आवश्यकता है",
+        "enterNew": "अपना नया पासवर्ड दर्ज करें",
+        "newReq": "नया पासवर्ड आवश्यक है",
+        "reEnterNew": "अपना नया पासवर्ड पुनः दर्ज करें",
+        "notMatch": "पासवर्ड मेल नहीं खाते"
     }
 }
