--- a/src/assets/i18n/hi.json
+++ b/src/assets/i18n/hi.json
@@ -190,5 +190,29 @@
         "newReq": "नया पासवर्ड आवश्यक है",
         "reEnterNew": "अपना नया पासवर्ड पुनः दर्ज करें",
         "notMatch": "पासवर्ड मेल नहीं खाते"
+    },
+    "sellOrRent": {
+        "enterTitle": "अपने उत्पाद के लिए एक शीर्षक दर्ज करें",
+        "titleReq": "शीर्षक आवश्यक है",
+        "enterDesc": "अपने उत्पाद का विवरण दर्ज करें",
+        "descReq": "विवरण आवश्यक है",
+        "enterCateg": "कोई श्रेणी चुनें",
+        "choose1":"एक चुनो",
+        "fertAndPest": "उर्वरक और कीटनाशक",
+        "seed": "बीज",
+        "equipAndMachi": "उपकरण और मशीनरी",
+        "other": "अन्य",
+        "categReq": "श्रेणी आवश्यक है",
+        "want": "आप चाहते हैं कि",
+        "sell": "बेचना",
+        "rent": "किराया",
+        "plsChoose": "कृपया चुने",
+        "enterPrice": "अपने उत्पाद के लिए एक मूल्य दर्ज करें",
+        "priceReq": "कृपया एक वैध दाम की प्रविष्टि करें",
+        "enterUnit": "अपने उत्पाद के लिए मूल्य की इकाई दर्ज करें",
+        "unitReq": "यूनिट मूल्य आवश्यक है",
+        "enterQuan": "उत्पाद की मात्रा दर्ज करें",
+        "quanReq": "मात्रा आवश्यक है",
+        "upload": "अपने उत्पाद की फ़ोटो अपलोड करने के लिए क्लिक करें"
     }
 }
