--- a/src/assets/i18n/hi.json
+++ b/src/assets/i18n/hi.json
@@ -179,7 +179,8 @@
         "takeShop": "मुझे दुकान पर ले चलो",
         "purchase": "खरीदारी करें",
         "rent": "किराए पर लें",
-        "noProducts": "दिखाने के लिए कोई उत्पाद नहीं"
+        "noProducts": "दिखाने के लिए कोई उत्पाद नहीं",
+        "buy": "अभी खरीदें"
     },
     "updatePass": {
         "click": "अपना पासवर्ड अपडेट करने के लिए क्लिक करें",
