--- a/src/assets/i18n/hi.json
+++ b/src/assets/i18n/hi.json
@@ -214,6 +214,13 @@
         "unitReq": "यूनिट मूल्य आवश्यक है",
         "enterQuan": "उत्पाद की मात्रा दर्ज करें",
         "quanReq": "मात्रा आवश्यक है",
-        "upload": "अपने उत्पाद की फ़ोटो अपलोड करने के लिए क्लिक करें"
+        "upload": "अपने उत्पाद की फ़ोटो अपलोड करने के लिए क्लिक करें",
+        "per": "प्रति - "
+    },
+    "product": {
+        "sellerId": "विक्रेता आईडी",
+        "sellerDetail": "(विक्रेता विवरण देखने के लिए क्लिक करें)",
+        "left": "स्टॉक में बचा",
+        "buy":"अभी खरीदें"
     }
 }
